--- a/deploy/cookbooks/sphinx/templates/default/sphinx.yml.erb
+++ b/deploy/cookbooks/sphinx/templates/default/sphinx.yml.erb
@@ -1,8 +1,9 @@
 <%= @node[:environment][:framework_env] %>:
-  address: <%= @host_ip %>
+  searchd_log_file: /var/log/engineyard/sphinx/<%= @app_name %>/searchd.log
+  query_log_file: /var/log/engineyard/sphinx/<%= @app_name %>/query.log
+  pid_file: /var/run/sphinx/<%= @app_name %>.pid
+  address: <%= @address %>
   port: 9312
-  searchd_log_file: <%= @log_path %>/searchd.<%= @env %>.log
-  query_log_file: <%= @log_path %>/searchd.query.<%= @env %>.log
-  pid_file: <%= @log_path %>/searchd.<%= @env %>.pid
-  searchd_file_path: /data/sphinx/<%= @app_name %>
-
+  mem_limit: <%= @mem_limit %>
+  config_file: /data/<%= @app_name %>/current/config/sphinx/<%= @node[:environment][:framework_env] %>.sphinx.conf
+  searchd_file_path: /var/log/engineyard/sphinx/<%= @app_name %>/indexes
