upgrade sphinx to match website

--- a/deploy/cookbooks/sphinx/templates/default/sphinx.monitrc.erb
+++ b/deploy/cookbooks/sphinx/templates/default/sphinx.monitrc.erb
@@ -1,5 +1,6 @@
 check process sphinx_<%= @app_name %>_9312
-  with pidfile /var/run/sphinx/<%= @app_name %>.pid
-  start program = "/engineyard/bin/<%= @flavor %>_searchd <%= @app_name %> start <%= @env %>" as uid <%= @user %> and gid <%= @user %> with timeout 90 seconds
-  stop program = "/engineyard/bin/<%= @flavor %>_searchd <%= @app_name %> stop <%= @env %>" as uid <%= @user %> and gid <%= @user %> with timeout 90 seconds
+  with pidfile /var/log/engineyard/sphinx/<%= @app_name %>/searchd.<%= @env %>.pid
+  start program = "/bin/sh -c 'cd /data/<%= @app_name %>/current && RAILS_ENV=<%= @env %> HOME=/home/deploy bundle exec rake thinking_sphinx:start > log/searchd.log 2>&1'" as uid <%= @user %> and gid <%= @user %>
+  stop program = "/bin/sh -c 'cd /data/<%= @app_name %>/current && RAILS_ENV=<%= @env %> bundle exec rake thinking_sphinx:stop > log/searchd.log 2>&1'" as uid <%= @user %> and gid <%= @user %>
   group sphinx_<%= @app_name %>
+
