--- a/deploy/cookbooks/sphinx/templates/default/sphinx.yml.erb
+++ b/deploy/cookbooks/sphinx/templates/default/sphinx.yml.erb
@@ -1,9 +1,7 @@
 <%= @node[:environment][:framework_env] %>:
-  searchd_log_file: /var/log/engineyard/sphinx/<%= @app_name %>/searchd.log
-  query_log_file: /var/log/engineyard/sphinx/<%= @app_name %>/query.log
-  pid_file: /var/run/sphinx/<%= @app_name %>.pid
-  address: <%= @address %>
+  address: <%= @host_ip %>
   port: 9312
-  mem_limit: <%= @mem_limit %>
-  config_file: /data/<%= @app_name %>/current/config/sphinx/<%= @node[:environment][:framework_env] %>.sphinx.conf
-  searchd_file_path: /var/log/engineyard/sphinx/<%= @app_name %>/indexes
+  searchd_log_file: <%= @log_path %>/searchd.<%= @env %>.log
+  query_log_file: <%= @log_path %>/searchd.query.<%= @env %>.log
+  pid_file: <%= @log_path %>/searchd.<%= @env %>.pid
+  searchd_file_path: /data/sphinx/<%= @app_name %>
