--- a/deploy/cookbooks/sphinx/templates/default/sphinx.yml.erb
+++ b/deploy/cookbooks/sphinx/templates/default/sphinx.yml.erb
@@ -7,3 +7,4 @@
   mem_limit: <%= @mem_limit %>
   config_file: /data/<%= @app_name %>/current/config/sphinx/<%= @node[:environment][:framework_env] %>.sphinx.conf
   searchd_file_path: /var/log/engineyard/sphinx/<%= @app_name %>/indexes
+  bin_path: /usr/local/bin 
