--- a/deploy/cookbooks/jenkins/repo/templates/nginx.server.conf.mustache
+++ b/deploy/cookbooks/jenkins/repo/templates/nginx.server.conf.mustache
@@ -10,7 +10,7 @@ server {
   location / {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto https;
+    proxy_set_header X-Forwarded-Proto http;
     proxy_set_header Host $http_host;
     proxy_next_upstream error;
     proxy_pass http://jenkins;
