move jenkins home to /data

--- a/deploy/cookbooks/jenkins/repo/templates/init.d.mustache
+++ b/deploy/cookbooks/jenkins/repo/templates/init.d.mustache
@@ -7,7 +7,7 @@ service_description="Jenkins CI Server"
 pid_file="/var/run/jenkins/jenkins.pid"
 jenkins_home="{{home}}"
 user="{{user}}"
-HOME="/home/${user}"
+HOME="/data/home/${user}"
 USER="${user}"
 java_binary=/usr/bin/java
 flags=(
